# Ai_Application_With_llama_index

./: .gitignore  pyproject.toml
src/PITS/: app.py  conversation_engine.py  document_uploader.py  global_settings.py  index_builder.py  logging_functions.py  quiz_builder.py  quiz_interface.py  session_functions.py  storage_manager.py  training_interface.py  training_material_builder.py  user_onboarding.py
src/ch02/: sample.py
src/ch03/: app_chat_about_messis.py  create_and_query_index.py  create_doc.py  create_doc_from_wiki.py  create_node.py  create_node_with_relationships.py  token_textsplit.py
src/ch04/: parser_html.py  parser_langchainnodeparser.py  parser_markdown.py  parser_sentencewindownodeparser.py  parser_simplefilenodeparser.py  reader_databasereader.py  reader_simpledirectory.py  reader_simplewebpage.py  splitter_codesplitter.py
src/common/: config.py
