[project]
name = "building-ai-app-with-llamaindex"
version = "0.1.0"
description = "Building an ai application with llamaindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.22.2",
    "docx2txt>=0.9",
    "llama-index>=0.14.14",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-dashscope>=0.5.2",
    "llama-index-llms-langchain>=0.7.1",
    "llama-index-readers-wikipedia>=0.4.1",
    "pypdf>=6.7.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
    "wikipedia>=1.4.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
verify = true
default = true
